log
Tue 23 Apr 2024 11:09:52 AM UTC: 
 tests:  0|6
total_score: 0/70
e9a25ee
Tue 23 Apr 2024 03:20:23 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
8a761b2
Tue 23 Apr 2024 03:20:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8f3ec23
Tue 23 Apr 2024 03:27:55 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
acb28fb
Tue 23 Apr 2024 03:28:30 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
92acc9e
Tue 23 Apr 2024 03:29:24 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:17: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   temp->current = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1a3db1b
Tue 23 Apr 2024 03:29:39 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d7d2201
Tue 23 Apr 2024 04:15:02 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:16: error: expected expression before ‘=’ token
   61 |   temp->size = =;
      |                ^
Compilation failed
21898a4
Tue 23 Apr 2024 04:16:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
65eb0b4
Tue 23 Apr 2024 04:16:25 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
0d6a218
Tue 23 Apr 2024 04:16:47 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
69b8982
Tue 23 Apr 2024 04:20:54 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
800b2a4
Tue 23 Apr 2024 04:21:15 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
11b6721
Tue 23 Apr 2024 04:21:50 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
b256546
Tue 23 Apr 2024 04:26:29 PM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
1f23c3d
Tue 23 Apr 2024 04:32:29 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
067dc67
Tue 23 Apr 2024 04:32:51 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|6
total_score: 10/70
a0688a7
Tue 23 Apr 2024 04:33:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
ef55189
Tue 23 Apr 2024 04:33:44 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
5780b30
Tue 23 Apr 2024 04:34:04 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:61:5: error: ‘ma’ undeclared (first use in this function); did you mean ‘map’?
   61 |     ma->size++;
      |     ^~
      |     map
hashmap.c:61:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
81ebf3b
Tue 23 Apr 2024 04:34:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
51b7321
Tue 23 Apr 2024 04:35:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
c73818a
Wed 24 Apr 2024 02:45:11 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
71c9324
Wed 24 Apr 2024 02:45:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
3bdb30a
Wed 24 Apr 2024 02:47:26 AM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|0
2e97c29
Wed 24 Apr 2024 02:48:25 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ae21a5
Wed 24 Apr 2024 02:50:39 AM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
c1e069d
Wed 24 Apr 2024 02:53:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b4700b
Wed 24 Apr 2024 02:54:29 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
64fdcfe
Wed 24 Apr 2024 02:55:14 AM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:8: error: unused variable ‘pos’ [-Werror=unused-variable]
   89 |   long pos = hash(key, map->capacity);
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
2017af4
Wed 24 Apr 2024 02:55:25 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|5
total_score: 20/70
db275e5
Wed 24 Apr 2024 02:56:18 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
35bf39e
Wed 24 Apr 2024 03:08:39 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|5
total_score: 20/70
6db1002
